# LogParser

./: .gitignore  CMakeLists.txt  Dockerfile.windows  LICENSE  README.md  app.rc  build.bat  build_windows.bat  installer.nsi  package.bat  package.ps1  setup_and_build.ps1
src/: appsettings.cpp  appsettings.h  canvaspanel.cpp  canvaspanel.h  chartwidget.cpp  chartwidget.h  csvparser.cpp  csvparser.h  main.cpp  mainwindow.cpp  mainwindow.h  presetmanager.cpp  presetmanager.h  scripteditor.cpp  scripteditor.h  scriptengine.cpp  scriptengine.h  seriesstyledialog.cpp  seriesstyledialog.h
test_data/: sample.csv
